# SPIRV-LLVM-Translator

include/: LLVMSPIRVLib.h
lib/SPIRV/: CMakeLists.txt  SPIRVCanonicalization.cpp  SPIRVInternal.h  SPIRVReader.cpp  SPIRVRegularizeLLVM.cpp  SPIRVWriter.cpp  SPIRVWriter.h
lib/SPIRV/libSPIRV/: SPIRVBasicBlock.cpp  SPIRVDecorate.cpp  SPIRVDecorate.h  SPIRVEntry.cpp  SPIRVEntry.h  SPIRVEnum.h  SPIRVFunction.h  SPIRVInstruction.h  SPIRVIsValidEnum.h  SPIRVModule.cpp  SPIRVModule.h  SPIRVNameMapEnum.h  SPIRVType.h
tools/llvm-spirv/: CMakeLists.txt  llvm-spirv.cpp
